WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302689
Touch event regions are missing for elements which have touch handlers but no JS listeners
https://bugs.webkit.org/show_bug.cgi?id=302689
Summary
Touch event regions are missing for elements which have touch handlers but no...
Lily Spiniolas
Reported
2025-11-17 22:10:22 PST
rdar://164939029
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-11-19 16:25:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54217
Lily Spiniolas
Comment 2
2025-11-19 16:31:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54219
EWS
Comment 3
2025-11-25 16:16:32 PST
Committed
303558@main
(dd0cc81543c2): <
https://commits.webkit.org/303558@main
> Reviewed commits have been landed. Closing PR #54219 and removing active labels.
Chris Dumez
Comment 4
2025-11-25 17:37:12 PST
Follow-up build fix:
https://github.com/WebKit/WebKit/pull/54464
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug