Source/WebCore/html/HTMLInputElement.h
@@ -355,6 +355,10 @@ public:
 
     void initializeInputTypeAfterParsingOrCloning();
 
+#if ENABLE(TOUCH_EVENTS)
+    void updateTouchEventHandler();
+#endif
+
 private:
     enum class CreationType : uint8_t { Normal, ByParser, ByCloning };
     HTMLInputElement(const QualifiedName&, Document&, HTMLFormElement*, CreationType);
@@ -446,10 +450,6 @@ private:
 
     void updateType(const AtomString& typeAttributeValue);
     void runPostTypeUpdateTasks();
-
-#if ENABLE(TOUCH_EVENTS)
-    void updateTouchEventHandler();
-#endif
 
     void subtreeHasChanged() final;
     void disabledStateChanged() final;
