Source/WebCore/html/RangeInputType.cpp
@@ -267,7 +267,13 @@ void RangeInputType::createShadowSubtree()
     container->appendChild(ContainerNode::ChildChange::Source::Parser, track);
 
     track->setUserAgentPart(UserAgentParts::webkitSliderRunnableTrack());
-    track->appendChild(ContainerNode::ChildChange::Source::Parser, SliderThumbElement::create(document));
+    Ref thumb = SliderThumbElement::create(document);
+    track->appendChild(ContainerNode::ChildChange::Source::Parser, thumb);
+
+#if ENABLE(IOS_TOUCH_EVENTS)
+    // Set up the initial enablement state for the thumb now that it has a parent.
+    thumb->hostDisabledStateChanged();
+#endif
 }
 
 HTMLElement* RangeInputType::sliderTrackElement() const
